[package]
name = "bom_cmp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0"
log = "0"
anyhow = "1.0.89"
eframe = "0.27.0"
egui = "0.27.0"
egui_extras = "0.27.0"
rfd = "0.15.0"
umya-spreadsheet = "2.1.1"
